Wed Feb 12 16:17:44 1997  Tom Yu  <tlyu@mit.edu>

	* aclocal.m4: Remove INSTALL_VARIABLE_HACK, as it's no longer
	needed in autoconf 2.12.

Mon Feb 10 11:30:56 1997  Ezra Peisach  <epeisach@mit.edu>

	* aclocal.m4 (KRB5_LIB_PARAMS): Set CC_LINK_STATIC for platforms
		w/o shared library support.
		     (KRB5_LIB_AUX); Set CC_LINK if --enable-shared is not
		specified.

Mon Feb  3 00:11:37 1997  Richard Basch  <basch@lehman.com>

	* Makefile.in:
		awk-windows-mac: Only rebuild based on what has changed

Mon Dec 30 13:39:46 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* aclocal.m4: Add AC_PREREQ(2.12) as we now require autoconf 2.12.
		[krb5-build/289]

Sun Feb  9 01:01:32 1997  Tom Yu  <tlyu@mit.edu>

	* aclocal.m4 (KRB5_LIB_PARAMS): Fix up RUN_ENV for alpha-dec-osf*
	so that we don't try to set _RLD_ROOT before setting
	LD_LIBRARY_PATH (which needs to call sed).

Sat Feb  8 15:39:08 1997  Tom Yu  <tlyu@mit.edu>

	* aclocal.m4: Fix up AC_KRB5_TCL somewhat to deal with
	--with-tcl=pathname properly.

	* aclocal.m4 (KRB5_RUN_FLAGS): Convert to no longer use old cache
	variable kludge.
	(KRB5_LIB_AUX): Set CC_LINK to CC_LINK_SHARED or CC_LINK_STATIC,
	depending on whether we're building with shared libraries.

Wed Feb  5 21:03:41 1997  Tom Yu  <tlyu@mit.edu>

	* aclocal.m4 (AC_KRB5_TCL): Fix up to work better with new program
	build procedure.

	* aclocal.m4 (WITH_KRB4): Fix up KRB4_INCLUDES to look in the
	build tree as well.

Mon Feb  3 23:27:57 1997  Tom Yu  <tlyu@mit.edu>

	* aclocal.m4: Check for -lgen properly.

Sat Feb  1 08:27:19 1997  Ezra Peisach  <epeisach@mit.edu>

	* aclocal.m4: CC_LINK for alpha changed -R to -Wl,-rpath....

Fri Jan 31 21:48:08 1997  Tom Yu  <tlyu@mit.edu>

	* aclocal.m4: Some WITH_KRB4 tweaks.

Mon Jan 27 17:12:13 1997  Tom Yu  <tlyu@mit.edu>

	* aclocal.m4: Add KRB5_BUILD_PROGRAM and
	KRB5_BUILD_LIBRARY_STATIC.

Sun Jan 26 22:37:16 1997  Ezra Peisach  <epeisach@mit.edu>

	* aclocal.m4:: Remove V5_MAKE_SHARED_LIB, V5_SHARED_LIB_OBJS
