@@ -1,3 +1,10 @@
+Fri Feb 14 15:52:14 1997  Tom Yu  <tlyu@mit.edu>
+
+	* aclocal.m4: Add shared library support for Irix.
+
+	* configure.in: inactivate the old case statement that determined
+	shared lib parameters; keep it around just for reference, though.
+
 Wed Feb 12 16:17:44 1997  Tom Yu  <tlyu@mit.edu>
 
 	* aclocal.m4: Remove INSTALL_VARIABLE_HACK, as it's no longer
